src/test/ui/parser/issue-1655.stderr
error: expected `[`, found `vec`
  --> $DIR/issue-1655.rs:3:6
   |
LL |     #vec[doc(
   |      ^^^ expected `[`

error: aborting due to previous error

